Fix GitHub Actions workflow: correct Vercel action reference

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -82,7 +82,7 @@ jobs:
           path: frontend/dist/
 
       - name: Deploy to Vercel
-        uses: vercel/action@v1
+        uses: vercel/action-deploy@v1
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
