--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -65,7 +65,7 @@ jobs:
         run: |
           python manage.py test
 
-  # Deploy to Vercel (Frontend)
+  # Deploy to Vercel (Frontend) - Vercel auto-deploys from GitHub
   deploy-frontend:
     needs: [frontend, backend]
     runs-on: ubuntu-latest
@@ -75,19 +75,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Download frontend build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: frontend-build
-          path: frontend/dist/
-
-      - name: Deploy to Vercel
-        uses: vercel/action-deploy@v1
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          working-directory: ./frontend
+      - name: Vercel Auto-Deploy
+        run: |
+          echo "✅ Frontend build completed successfully"
+          echo "🚀 Vercel will auto-deploy from this GitHub push"
+          echo "📱 Frontend will be available at: https://cicd-whitefly-2ee8.vercel.app"
 
   # Deploy Backend to Render (or Railway)
   deploy-backend:
@@ -99,8 +91,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Deploy to Render
-        uses: johnbeynon/render-deploy-action@v0.0.8
-        with:
-          service-id: ${{ secrets.RENDER_SERVICE_ID }}
-          api-key: ${{ secrets.RENDER_API_KEY }}
+      - name: Render Auto-Deploy
+        run: |
+          echo "✅ Backend tests completed successfully"
+          echo "🚀 Render will auto-deploy from this GitHub push"
+          echo "🔗 Backend API will be available at: https://cicd-whitefly-v2.onrender.com"
