Fix: Ensure production API URL is used in deployed frontend

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -5,7 +5,9 @@
       "destination": "/index.html"
     }
   ],
-  "env": {
-    "VITE_API_URL": "https://cicd-whitefly-v2.onrender.com/api"
+  "build": {
+    "env": {
+      "VITE_API_URL": "https://cicd-whitefly-v2.onrender.com/api"
+    }
   }
 }
