--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,3 +15,7 @@ Pillow==12.0.0
 # HTTP & Utilities
 requests==2.32.5
 sqlparse==0.5.3
+
+# Monitoring & Metrics
+django-prometheus==2.3.1
+prometheus-client==0.20.0
